--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="stylesheets/style.css">
     <script src="https://kit.fontawesome.com/3ff77e86fd.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body id="home-page">
     <header>
         <div class="slideshow-container">
 
@@ -27,14 +27,50 @@
           </div>
 
 
-        <nav>
+          <nav id="navigation" class="topnav">
+            <a href="">Home</a>
+            <a href="">Option 3</a>
+            <a href="">Option 2</a>
+            <a href="">Option 1</a>
+            <div id="icon-wrapper">
+                <a class="fas fa-heart"></a>
+				<a class="fa-solid fa-user"></a>
+                <a href="javascript:void(0);" class="icon" onclick="mobileNav()">
+                    <i class="fa fa-bars"></i>
+                  </a>
+            </div>
 
         </nav>
     </header>
+
     <main>
+        <aside>
+            <h3>Recently visited</h3>
+            <article class="aside-item">
+                <img src="photos/pizza.jpeg">
+                <div class="aside-text"> 
+                    <h4>A recipe</h4>
+                    <p>Try out this recipe now this is very cool and stuff</p>
+                </div>
+            </article>
+            <article class="aside-item">
+                <img src="photos/pizza.jpeg">
+                <div class="aside-text"> 
+                    <h4>A recipe</h4>
+                    <p>Try out this recipe now this is very cool and stuff</p>
+                </div>
+            </article>
+            <article class="aside-item">
+                <img src="photos/pizza.jpeg">
+                <div class="aside-text"> 
+                    <h4>A recipe</h4>
+                    <p>Try out this recipe now this is very cool and stuff</p>
+                </div>
+            </article>
+        </aside>
         <section>
         <input type="text" id="search" placeholder="Search..">
-    </section>
+    
         <section>
             <h2>Category</h2>
             <section class="item-container">
@@ -136,9 +172,7 @@
         </section>
         </section>
         <section>
-            <article class="ad">
-                <img src="photos/header2.jpg" class="ad-photo">
-            </article>
+
         </section>
         <section>
             <h2>Category</h2>
@@ -239,6 +273,7 @@
             </article>
 </section>
         </section>
+    </section>
     </main>
     <footer></footer>
 </body>
