--- a/subpages/login.html
+++ b/subpages/login.html
@@ -13,33 +13,18 @@
   </head>
   <body id="signup-subpage">
     <header>
-      <nav id="navigation" class="topnav">
-        <a class="header-logo" href="../index.html"
-          ><img src="../photos/logo.png" alt="meal-morale-logo"
-        /></a>
-        <li class="li-item">
-          <ul>
-            <a class="nav-link" href="">Home</a>
-          </ul>
-          <ul>
-            <a class="nav-link" href="">Option 3</a>
-          </ul>
-          <ul>
-            <a class="nav-link" href="">Option 2</a>
-          </ul>
-          <ul>
-            <a class="nav-link" href="">Option 1</a>
-          </ul>
-        </li>
-        <div id="icon-wrapper">
-          <a href="javascript:void(0);" class="icon" onclick="mobileNav()">
-            <i class="fa fa-bars"></i>
-            <a class="fas fa-heart"></a>
-            <a class="fas fa-user"></a>
-          </a>
-        </div>
-      </nav>
-    </header>
+      <header>
+        <section class="header-desktop">
+            <a href="../index.html"><img class="header-logo-desktop" src="../photos/logo.png" alt="meal-morale-logo"></a>
+            <div class="icons-desktop">
+                  <a href="/subpages/favourite.html" class="fas fa-heart"></a>
+                  <a href="/subpages/login.html" class="fas fa-user"></a>
+                </a>
+              </div>
+        </section>
+
+        <h2>become a member today!</h2>
+          </header>
     <section id="signup-wrapper">
       <article id="image-wrapper"></article>
 
@@ -55,7 +40,9 @@
           </p>
           <button class="signup-btn">Log in</button>
         </form>
+        
       </article>
+      <h3>Aren't you a member yet? <a href="/subpages/signup.html">Sign up!</a></h3>
     </section>
     <div class="popup-window--background"></div>
     <article class="popup-window">
@@ -66,7 +53,9 @@
         <input name="email" type="email" placeholder="E-mail" />
         <button class="signup-btn">Send password</button>
       </form>
+
     </article>
+
   </body>
   <script src="../javascript/nav.js"></script>
   <script src="../javascript/reset.js"></script>
