layout of fav and login page update

--- a/subpages/favourite.html
+++ b/subpages/favourite.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Favourite list</title>
-    <link rel="stylesheet" href="../stylesheets/style.css" />
+    <link rel="stylesheet" href="../stylesheets/style-michal.css" />
     <link rel="stylesheet" href="../stylesheets/footer-style.css" />
     <script
       src="https://kit.fontawesome.com/3ff77e86fd.js"
@@ -294,7 +294,7 @@
                 <li class="list-inline-item"><a href="#">Create recipe</a></li>
                 <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
             </ul>
-            <div class="social"><a href="https://www.facebook.com/"><img src="../photos/icons/facebook.png" alt="facebook-icon-black"><i class="icon ion-social-facebook"></i></a><a href="https://www.instagram.com/"><img src="../photos/icons/instagram.png" alt="instagram-icon-black"><i class="icon ion-social-instagram"></i></a><a href="https://www.twitter.com/"><img src="../photos/icons/twitter.png" alt="twitter-icon-black"><i class="icon ion-social-twitter"></i></a><a href="https://www.youtube.com/"><img src="../photos/icons/youtube.png" alt="youtube-icon-black"><i class="icon ion-social-youtube"></i></a></div>
+            <div class="social"><a href="https://www.facebook.com/"><img src="../photos/svg-icons/facebook.svg" alt="facebook-icon-black"><i class="icon ion-social-facebook"></i></a><a href="https://www.instagram.com/"><img src="../photos/svg-icons/instagram.svg" alt="instagram-icon-black"><i class="icon ion-social-instagram"></i></a><a href="https://www.twitter.com/"><img src="../photos/svg-icons/twitter.svg" alt="twitter-icon-black"><i class="icon ion-social-twitter"></i></a><a href="https://www.youtube.com/"><img src="../photos/svg-icons/youtube.svg" alt="youtube-icon-black"><i class="icon ion-social-youtube"></i></a></div>
 
             <p class="copyright">Meal Morale© 2022</p>
         </footer>
@@ -302,4 +302,5 @@
 
     
   </body>
+  <script src="../javascript/nav.js"></script>
 </html>
