--- a/subpages/login.html
+++ b/subpages/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../stylesheets/style.css" />
+    <link rel="stylesheet" href="../stylesheets/style-michal.css" />
     <title>Sign up</title>
     <script
       src="https://kit.fontawesome.com/3ff77e86fd.js"
@@ -13,18 +13,33 @@
   </head>
   <body id="signup-subpage">
     <header>
-      <header>
-        <section class="header-desktop">
-            <a href="../index.html"><img class="header-logo-desktop" src="../photos/logo.png" alt="meal-morale-logo"></a>
-            <div class="icons-desktop">
-                  <a href="/subpages/favourite.html" class="fas fa-heart"></a>
-                  <a href="/subpages/login.html" class="fas fa-user"></a>
-                </a>
-              </div>
-        </section>
-
-        <h2>become a member today!</h2>
-          </header>
+      <nav id="navigation" class="topnav">
+        <a class="header-logo" href="../index.html"
+          ><img src="../photos/logo.png" alt="meal-morale-logo"
+        /></a>
+        <li class="li-item">
+          <ul>
+            <a class="nav-link" href="">Home</a>
+          </ul>
+          <ul>
+            <a class="nav-link" href="">Option 3</a>
+          </ul>
+          <ul>
+            <a class="nav-link" href="">Option 2</a>
+          </ul>
+          <ul>
+            <a class="nav-link" href="">Option 1</a>
+          </ul>
+        </li>
+        <div id="icon-wrapper">
+          <a href="javascript:void(0);" class="icon" onclick="mobileNav()">
+            <i class="fa fa-bars"></i>
+            <a class="fas fa-heart"></a>
+            <a class="fas fa-user"></a>
+          </a>
+        </div>
+      </nav>
+    </header>
     <section id="signup-wrapper">
       <article id="image-wrapper"></article>
 
@@ -40,22 +55,31 @@
           </p>
           <button class="signup-btn">Log in</button>
         </form>
-        
+        <h3 class="not-a-member">
+          Aren't you a member yet? <a href="/subpages/signup.html">Sign up!</a>
+        </h3>
       </article>
-      <h3>Aren't you a member yet? <a href="/subpages/signup.html">Sign up!</a></h3>
     </section>
     <div class="popup-window--background"></div>
-    <article class="popup-window">
+    <article class="popup-window form-wrapper">
+      <img
+        class="close-box"
+        src="../photos/close.png"
+        alt="close-icon"
+        srcset=""
+      />
       <h1>Reset password:</h1>
-      <p class="close-box">x</p>
       <form>
-        <label for="email">Password:</label>
-        <input name="email" type="email" placeholder="E-mail" />
-        <button class="signup-btn">Send password</button>
+        <label for="email">Your email:</label>
+        <input
+          class="reset-password_input"
+          name="email"
+          type="email"
+          placeholder="E-mail"
+        />
+        <button class="reset-password_btn">Send password</button>
       </form>
-
     </article>
-
   </body>
   <script src="../javascript/nav.js"></script>
   <script src="../javascript/reset.js"></script>
