next changes to signup

--- a/subpages/settings.html
+++ b/subpages/settings.html
@@ -1,51 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User settings</title>
-    <link rel="stylesheet" href="../stylesheets/style.css">
-</head>
-<body id="settings-subpage">
+    <link rel="stylesheet" href="../stylesheets/style.css" />
+  </head>
+  <body id="settings-subpage">
     <header>
-        <article class="ad">
-            <img src="../photos/header2.jpg" class="ad-photo">
-        </article>
-        <nav id="navigation" class="topnav">
-            <a href="">Home</a>
-            <a href="">Option 3</a>
-            <a href="">Option 2</a>
-            <a href="">Option 1</a>
-            <div id="icon-wrapper">
-                <a class="fas fa-heart"></a>
-				<a class="fa-solid fa-user"></a>
-                <a href="javascript:void(0);" class="icon" onclick="mobileNav()">
-                    <i class="fa fa-bars"></i>
-                  </a>
-            </div>
-
-        </nav>
+      <article class="ad">
+        <img src="../photos/header2.jpg" class="ad-photo" />
+      </article>
+      <nav id="navigation" class="topnav">
+        <a href="">Home</a>
+        <a href="">Option 3</a>
+        <a href="">Option 2</a>
+        <a href="">Option 1</a>
+        <div id="icon-wrapper">
+          <a class="fas fa-heart"></a>
+          <a class="fa-solid fa-user"></a>
+          <a href="javascript:void(0);" class="icon" onclick="mobileNav()">
+            <i class="fa fa-bars"></i>
+          </a>
+        </div>
+      </nav>
     </header>
     <main id="settings-wrapper">
-    <aside id="settings-headings">
+      <aside id="settings-headings">
         <a href="">General</a>
         <a href="">Account</a>
         <a href="">Profile</a>
         <a href="">Privacy</a>
-    </aside>
-    <section>
+      </aside>
+      <section>
         <article id="general-settings" class="settings">
-        <h1>Change your password</h1>
-        <form>
-        <input name="oldpassword" type="text" placeholder="Old password">
-        <input name="newpassword" type="password" placeholder="New password">
-        <input name="newpassword2" type="password" placeholder="Repeat new password">
-        <button>Confirm</button>
-    </form>
-    </article>
-    </section>
+          <h1>Change your password</h1>
+          <form>
+            <input name="oldpassword" type="text" placeholder="Old password" />
+            <input
+              name="newpassword"
+              type="password"
+              placeholder="New password"
+            />
+            <input
+              name="newpassword2"
+              type="password"
+              placeholder="Repeat new password"
+            />
+            <button>Confirm</button>
+          </form>
+        </article>
+      </section>
     </main>
     <footer></footer>
-</body>
+  </body>
 </html>
