--- a/subpages/signup.html
+++ b/subpages/signup.html
@@ -1,46 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../stylesheets/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../stylesheets/style-michal.css" />
     <title>Sign up</title>
-    <script src="https://kit.fontawesome.com/3ff77e86fd.js" crossorigin="anonymous"></script>
-</head>
-<body id="signup-subpage">
+    <script
+      src="https://kit.fontawesome.com/3ff77e86fd.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body id="signup-subpage">
     <header>
-        <nav id="navigation" class="topnav">
-            <a href="">Home</a>
-            <a href="">Option 3</a>
-            <a href="">Option 2</a>
-            <a href="">Option 1</a>
-            <div id="icon-wrapper">
-                <a class="fas fa-heart"></a>
-				<a class="fa-solid fa-user"></a>
-                <a href="javascript:void(0);" class="icon" onclick="mobileNav()">
-                    <i class="fa fa-bars"></i>
-                  </a>
-            </div>
-        </nav>
+      <nav id="navigation" class="topnav">
+        <a href="">Home</a>
+        <a href="">Option 3</a>
+        <a href="">Option 2</a>
+        <a href="">Option 1</a>
+        <div id="icon-wrapper">
+          <a class="fas fa-heart"></a>
+          <a class="fa-solid fa-user"></a>
+          <a href="javascript:void(0);" class="icon" onclick="mobileNav()">
+            <i class="fa fa-bars"></i>
+          </a>
+        </div>
+      </nav>
     </header>
- <section id="signup-wrapper">
-     <article id="image-wrapper">
+    <main>
+      <section id="signup-wrapper">
+        <article id="image-wrapper"></article>
 
-     </article>
-
-    <article id="form-wrapper">
-     <h1>Join the community</h1>
-     <form>
-         <input name="email" type="text" placeholder="Email">
-         <input name="username" type="text" placeholder="Username">
-         <input name="password" type="password" placeholder="Password">
-         <button>Sign up</button>
-     </form>
-     <p class="log-in">Already have an account? Log in instead</p>
-    </article>
-
- </section>   
-</body>
-<script src="../javascript/nav.js"></script>
+        <article id="form-wrapper">
+          <h1>Join the community</h1>
+          <form>
+            <label for="username">User name:</label>
+            <input name="username" type="text" placeholder="Username" />
+            <label for="email">Email address:</label>
+            <input name="email" type="text" placeholder="Email" />
+            <label for="password">Password:</label>
+            <input name="password" type="password" placeholder="Password" />
+            <button class="signup-btn">Sign up</button>
+          </form>
+          <p class="log-in">Already have an account? Log in instead</p>
+        </article>
+      </section>
+    </main>
+  </body>
+  <script src="../javascript/nav.js"></script>
 </html>
