--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                   <a class="nav-link" href="">Home</a>
               </ul>
               <ul>
-                  <a class="nav-link" href="/subpages/recipe.html">My recipies</a>
+                  <a class="nav-link" href="/subpages/create-recipe.html">New recipie</a>
                   
               </ul>
               <ul>
@@ -91,9 +91,12 @@
                 </div>
             </article>
         </aside>-->
-        <section>
-        <h4>What are we cooking today?</h4>
-        <input type="text" id="search" placeholder="Search..">
+        <section class="search-section">
+            <div class="margin"><h4>What are we cooking today?</h4></div>
+            <input type="text" id="search" placeholder="Search..">
+
+        </section>
+
         <section>
             <h2>Category</h2>
             <section class="item-container">
