responsive nav added + small changes

--- a/subpages/allrecipes.html
+++ b/subpages/allrecipes.html
@@ -157,7 +157,7 @@
     </section>
         <section>
             <section class="item-container">
-            <article>
+            <article class="recipe-container">
                 <img src="../photos/2.jpeg" class="meal-photo">
                 <div class="details-container">
                     <i class="fa-solid fa-star"></i>
@@ -180,7 +180,7 @@
                 </div>
                 <button class="recipe-details-button">Read more</button>
             </article>
-            <article>
+            <article class="recipe-container">
                 <img src="../photos/3.jpeg" class="meal-photo">
                 <div class="details-container">
                     <i class="fa-solid fa-star"></i>
@@ -204,7 +204,7 @@
                 <button class="recipe-details-button">Read more</button>
             </article>
 
-            <article>
+            <article class="recipe-container"> 
                 <img src="../photos/4.jpeg" class="meal-photo">
                 <div class="details-container">
                     <i class="fa-solid fa-star"></i>
@@ -228,7 +228,7 @@
                 <button class="recipe-details-button">Read more</button>
             </article>
 
-            <article>
+            <article class="recipe-container">
                 <img src="../photos/5.jpeg" class="meal-photo">
                 <div class="details-container">
                     <i class="fa-solid fa-star"></i>
@@ -254,7 +254,7 @@
             
 </section>
     <section class="item-container">
-    <article>
+    <article class="recipe-container">
         <img src="../photos/6.jpeg" class="meal-photo">
         <div class="details-container">
             <i class="fa-solid fa-star"></i>
@@ -277,7 +277,7 @@
         </div>
         <button class="recipe-details-button">Read more</button>
     </article>
-    <article>
+    <article class="recipe-container">
         <img src="../photos/7.jpg" class="meal-photo">
         <div class="details-container">
             <i class="fa-solid fa-star"></i>
@@ -301,7 +301,7 @@
         <button class="recipe-details-button">Read more</button>
     </article>
 
-    <article>
+    <article class="recipe-container">
         <img src="../photos/4.jpeg" class="meal-photo">
         <div class="details-container">
             <i class="fa-solid fa-star"></i>
@@ -325,7 +325,7 @@
         <button class="recipe-details-button">Read more</button>
     </article>
 
-    <article>
+    <article class="recipe-container">
         <img src="../photos/pizza.jpeg" class="meal-photo">
         <div class="details-container">
             <i class="fa-solid fa-star"></i>
