--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-stroke"></i>
-                <h3>Very yummy pizza</h3>
+                <h3>Pizza traditional</h3>
                 <p>This meal is very nice. Easy to make. Cool stuff.</p>
 
                 </div>
@@ -130,7 +130,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-stroke"></i>
-                <h3>Very yummy pizza</h3>
+                <h3>Penne Pasta with tuna souce</h3>
                 <p>This meal is very nice. Easy to make. Cool stuff.</p>
 
                 </div>
@@ -154,7 +154,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-stroke"></i>
-                <h3>Very yummy pizza</h3>
+                <h3>Fresh salad</h3>
                 <p>This meal is very nice. Easy to make. Cool stuff.</p>
 
                 </div>
@@ -178,7 +178,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-stroke"></i>
-                <h3>Very yummy pizza</h3>
+                <h3>The perfect rice recipe</h3>
                 <p>This meal is very nice. Easy to make. Cool stuff.</p>
 
                 </div>
@@ -210,7 +210,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-stroke"></i>
-                <h3>Very yummy pizza</h3>
+                <h3>Noodles and more</h3>
                 <p>This meal is very nice. Easy to make. Cool stuff.</p>
 
                 </div>
@@ -233,7 +233,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-stroke"></i>
-                <h3>Very yummy pizza</h3>
+                <h3>Grilled veggies simple salad</h3>
                 <p>This meal is very nice. Easy to make. Cool stuff.</p>
 
                 </div>
@@ -257,7 +257,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-stroke"></i>
-                <h3>Very yummy pizza</h3>
+                <h3>Grilled chicken with Helmann's</h3>
                 <p>This meal is very nice. Easy to make. Cool stuff.</p>
 
                 </div>
