--- a/subpages/create-recipe.html
+++ b/subpages/create-recipe.html
@@ -22,7 +22,7 @@
               </div>
         </section>
         <nav id="navigation" class="topnav">
-            <a class="header-logo" href="../index.html"><img src="photos/logo.png" alt="meal-morale-logo"></a>
+            <a class="header-logo" href="../index.html"><img src="../photos/logo.png" alt="meal-morale-logo"></a>
             <ul class="link-wrapper">
                 <li>
                     
@@ -242,6 +242,9 @@
 
               <label class="details-title" >Step 4</label><br>
               <input class="details-title" type="text" placeholder="Write the intruction here"><br>
+              <div class="margin-top">
+                <button type="submit" class="secondary-button"><a class="fas fa-plus" href="#" aria-hidden="true"></a>Add more</button>
+            </div>
             </form>
     </section>
     <section>
