--- a/subpages/login.html
+++ b/subpages/login.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../stylesheets/style.css">
+    <link rel="icon" type="image/x-icon" href="../photos/icons/favicon.png">
     <link rel="stylesheet" href="../stylesheets/style-michal.css">
-    <title>Sign up</title>
+    <title>Log In</title>
     <script
       src="https://kit.fontawesome.com/3ff77e86fd.js"
       crossorigin="anonymous"
@@ -25,7 +26,7 @@
       </section>
 
       <nav id="navigation" class="topnav">
-        <a class="header-logo" href="../index.html"><img src="photos/logo.png" alt="meal-morale-logo"></a>
+        <a class="header-logo" href="../index.html"><img src="../photos/logo.png" alt="meal-morale-logo"></a>
         <ul class="link-wrapper">
             <li>
                 
@@ -63,10 +64,10 @@
           <input name="username" type="text" placeholder="Username" />
           <label for="password">Password:</label>
           <input name="password" type="password" placeholder="Password" />
-          <p class="log-in">
+          <p class="log-in  margin-top">
             <a class="reset-password">Forgot the password?</a>
           </p>
-          <button>Log in</button>
+          <button class="margin-top">Log in</button>
         </form>
         <p class="margin-top">Aren't you a member yet? <a href="/subpages/signup.html" class="details-link">Sign up</a></p>
       </article>
