--- a/subpages/settings.html
+++ b/subpages/settings.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="../photos/icons/favicon.png">
     <script src="https://kit.fontawesome.com/3ff77e86fd.js" crossorigin="anonymous"></script>
     <title>User settings</title>
     <link rel="stylesheet" href="../stylesheets/style.css">
+
 
   </head>
   <body id="settings-subpage">
@@ -22,7 +24,7 @@
       </section>
 
       <nav id="navigation" class="topnav">
-        <a class="header-logo" href="../index.html"><img src="photos/logo.png" alt="meal-morale-logo"></a>
+        <a class="header-logo" href="../index.html"><img src="../photos/logo.png" alt="meal-morale-logo"></a>
         <ul class="link-wrapper">
             <li>
                 
@@ -82,6 +84,6 @@
         </article>
       </section>
     </main>
-    <footer></footer>
+
   </body>
 </html>
