--- a/subpages/favourite.html
+++ b/subpages/favourite.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My favourites</title>
+    <link rel="icon" type="image/x-icon" href="../photos/icons/favicon.png">
     <link rel="stylesheet" href="../stylesheets/style.css">
     <link rel="stylesheet" href="../stylesheets/style-michal.css">
     <script
@@ -25,7 +26,7 @@
         </section>
 
         <nav id="navigation" class="topnav">
-            <a class="header-logo" href="../index.html"><img src="photos/logo.png" alt="meal-morale-logo"></a>
+            <a class="header-logo" href="../index.html"><img src="../photos/logo.png" alt="meal-morale-logo"></a>
             <ul class="link-wrapper">
                 <li>
                     
