--- a/subpages/recipe.html
+++ b/subpages/recipe.html
@@ -22,7 +22,7 @@
         </section>
 
         <nav id="navigation" class="topnav">
-            <a class="header-logo" href="../index.html"><img src="photos/logo.png" alt="meal-morale-logo"></a>
+            <a class="header-logo" href="../index.html"><img src="../photos/logo.png" alt="meal-morale-logo"></a>
             <ul class="link-wrapper">
                 <li>
                     
@@ -55,7 +55,7 @@
 
         </section>
       </header>
-    <main>
+    <main class="margin-top">
 
         <aside>
             <h3>Recently visited</h3>
