Signup and login page changes

--- a/subpages/login.html
+++ b/subpages/login.html
@@ -58,6 +58,7 @@
         </div>
       </nav>
     </header>
+    <main>
     <section id="signup-wrapper">
       <article id="image-wrapper"></article>
 
@@ -73,7 +74,7 @@
           </p>
           <button class="margin-top">Log in</button>
         </form>
-        <p class="margin-top">Aren't you a member yet? <a href="/subpages/signup.html" class="details-link">Sign up</a></p>
+        <p class="margin-top">Aren't you a member yet? <a href="../subpages/signup.html" class="details-link">Sign up</a></p>
       </article>
     </section>
     <div class="popup-window--background"></div>
@@ -96,6 +97,7 @@
         <button class="reset-password_btn">Send password</button>
       </form>
     </article>
+  </main>
   </body>
   <script src="../javascript/nav.js"></script>
   <script src="../javascript/reset.js"></script>
