--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <p><span class="details-title">Level</span>
                         <span class="details-text">EASY</p>
                 </div>
-                <a href="/subpages/recipe.html"><button  class="recipe-details-button">Read more</button></a>
+                <a href="subpages/recipe.html"><button  class="recipe-details-button">Read more</button></a>
             </article>
             <article class="recipe-container">
                 <div class="recipe-favorite"><i class="fa-solid fa-heart-circle-plus"></i></div>
@@ -148,7 +148,7 @@
                     <p><span class="details-title">Level</span>
                         <span class="details-text">EASY</p>
                 </div>
-                <a href="/subpages/recipe.html"><button  class="recipe-details-button">Read more</button></a>
+                <a href="subpages/recipe.html"><button  class="recipe-details-button">Read more</button></a>
             </article>
 
             <article class="recipe-container">
@@ -173,7 +173,7 @@
                     <p><span class="details-title">Level</span>
                         <span class="details-text">EASY</p>
                 </div>
-                <a href="/subpages/recipe.html"><button  class="recipe-details-button">Read more</button></a>
+                <a href="subpages/recipe.html"><button  class="recipe-details-button">Read more</button></a>
             </article>
 
             <article class="recipe-container">
@@ -198,7 +198,7 @@
                     <p><span class="details-title">Level</span>
                         <span class="details-text">EASY</p>
                 </div>
-                <a href="/subpages/recipe.html"><button  class="recipe-details-button">Read more</button></a>
+                <a href="subpages/recipe.html"><button  class="recipe-details-button">Read more</button></a>
             </article>
 
         </section>
@@ -231,7 +231,7 @@
                     <p><span class="details-title">Level</span>
                         <span class="details-text">EASY</p>
                 </div>
-                <a href="/subpages/recipe.html"><button  class="recipe-details-button">Read more</button></a>
+                <a href="subpages/recipe.html"><button  class="recipe-details-button">Read more</button></a>
             </article>
             <article class="recipe-container">
                 <div class="recipe-favorite"><i class="fa-solid fa-heart-circle-plus"></i></div>
@@ -255,7 +255,7 @@
                     <p><span class="details-title">Level</span>
                         <span class="details-text">EASY</p>
                 </div>
-                <a href="/subpages/recipe.html"><button  class="recipe-details-button">Read more</button></a>
+                <a href="subpages/recipe.html"><button  class="recipe-details-button">Read more</button></a>
             </article>
 
             <article class="recipe-container">
@@ -280,7 +280,7 @@
                     <p><span class="details-title">Level</span>
                         <span class="details-text">EASY</p>
                 </div>
-                <a href="/subpages/recipe.html"><button  class="recipe-details-button">Read more</button></a>
+                <a href="subpages/recipe.html"><button  class="recipe-details-button">Read more</button></a>
             </article>
 
             <article class="recipe-container">
@@ -305,7 +305,7 @@
                     <p><span class="details-title">Level</span>
                         <span class="details-text">EASY</p>
                 </div>
-                <a href="/subpages/recipe.html"><button  class="recipe-details-button">Read more</button></a>
+                <a href="subpages/recipe.html"><button  class="recipe-details-button">Read more</button></a>
             </article>
 </section>
         </section>
