--- a/subpages/allrecipes.html
+++ b/subpages/allrecipes.html
@@ -296,7 +296,7 @@
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star-half-stroke"></i>
-        <h3>Chicken with Helmann's</h3>
+        <h3>Chicken Helmann's</h3>
         <p>This meal is very nice. Easy to make. Cool stuff.</p>
 
         </div>
